force-app/main/default/objects/KimbleOne__CreditNoteLine__c/fields/KimbleOne__CreditNote__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditNote__c</fullName>
    <label>Credit Note</label>
    <referenceTo>KimbleOne__CreditNote__c</referenceTo>
    <relationshipLabel>Credit Note Lines</relationshipLabel>
    <relationshipName>CreditNoteLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>