force-app/main/default/objects/KimbleOne__CreditNoteLine__c/fields/KimbleOne__Narrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Narrative__c</fullName>
    <label>Narrative</label>
    <type>TextArea</type>
</CustomField>