force-app/main/default/objects/KimbleOne__CreditNoteLine__c/fields/KimbleOne__NetAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NetAmount__c</fullName>
    <label>Net Amount</label>
    <summarizedField>KimbleOne__CreditNoteLineItem__c.KimbleOne__NetAmount__c</summarizedField>
    <summaryForeignKey>KimbleOne__CreditNoteLineItem__c.KimbleOne__CreditNoteLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>