force-app/main/default/objects/KimbleOne__CreditNoteLine__c/fields/KimbleOne__NetAmountRounded__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NetAmountRounded__c</fullName>
    <formula>ROUND(KimbleOne__NetAmount__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount Rounded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>