force-app/main/default/objects/KimbleOne__CreditNoteLine__c/fields/KimbleOne__PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PurchaseOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>KimbleOne__PurchaseOrder__c</referenceTo>
    <relationshipLabel>Credit Note Lines</relationshipLabel>
    <relationshipName>CreditNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>