force-app/main/default/objects/KimbleOne__CreditNoteLine__c/fields/KimbleOne__TaxAmountFormatted__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxAmountFormatted__c</fullName>
    <label>Tax Amount (Formatted)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>