force-app/main/default/objects/KimbleOne__CreditNoteLine__c/fields/KimbleOne__TimeTotalUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeTotalUnits__c</fullName>
    <label>Time Total Units</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>